# Bayut

./: .cursorrules.mdc  .flake8  .gitignore  AGENT_AGENCY_RELATIONSHIP.md  ALEMBIC_MIGRATION_GUIDE.md  GIT_HOOKS.md  MIGRATION_GUIDE.md  PROJECT_CLEANUP.md  README.md  SIMPLIFIED_LOCATION_DESIGN.md  activate_venv.sh  alembic.ini  audit_report.md  bayut.py  curl_examples.md  pyproject.toml  requirements.txt  test_enhanced_results.json
alembic/: env.py
alembic/versions/: 214fe5745f2e_add_agency_id_to_agents.py  629a6ca77da7_add_missing_foreign_key_constraints.py  69eef7c710d7_add_unique_locations_and_property_.py  cc17a6ddfc89_add_unique_constraints_for_upserts.py  edddeb1db334_create_properties_table.py  fd80e6630fc4_hybrid_normalized_schema_for_properties_.py  simplified_location_migration.py
data/: __init__.py
data/output/: __init__.py
data/samples/: __init__.py
memory-bank/: activeContext.md  change-tracking-plan.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: format.sh  lint.sh  migrate_to_simplified_locations.py  rename_simplified_tables.py  test_simplified_migration.py  test_simplified_system.py
src/: __init__.py  backfill_locations.py  backfill_normalized.py  bayut_scraper.py  bayut_scraper_enhanced.py  db_utils.py  models.py  scrape_100_properties.py
tests/: __init__.py  test_enhanced_scraper.py  test_scraper.py
